<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bk_cs"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/superfit"
            android:layout_width="284dp"
            android:layout_height="78dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="top"
            android:text="@string/superfittxt"
            android:textAppearance="@style/superfit" />

        <LinearLayout
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="145dp"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#FFF"
                android:ems="10"
                android:fontFamily="@font/montserrat_light"
                android:inputType="textPersonName"
                android:hint="@string/usernametxt"
                android:textColorHint="#FFF"
                android:textAppearance="@style/username"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFF"
                android:ems="10"
                android:fontFamily="@font/montserrat_light"
                android:inputType="textPersonName"
                android:hint="@string/emailtxt"
                android:textColorHint="#FFF"
                android:textAppearance="@style/username"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFF"
                android:ems="10"
                android:fontFamily="@font/montserrat_light"
                android:inputType="textPersonName"
                android:hint="@string/codetxt"
                android:textColorHint="#FFF"
                android:textAppearance="@style/username"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/repeatcode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:backgroundTint="#FFF"
                android:ems="10"
                android:fontFamily="@font/montserrat_light"
                android:inputType="textPersonName"
                android:hint="@string/repeat_code_txt"
                android:textColorHint="#FFF"
                android:textAppearance="@style/username"
                android:textColor="#fff" />
        </LinearLayout>

        <!-- Sign In -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:onClick="Sign_up_reg">
            <TextView
                android:id="@+id/sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/sign_uptxt"
                android:textAppearance="@style/sign_up"
                android:fontFamily="@font/montserrat_bold"/>
            <!-- Vector -->
            <View
                android:id="@+id/vector"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/vector" />
        </LinearLayout>
        <!-- Sign Up -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="110dp"
            android:onClick="Sign_in_reg"
            >
            <!-- Vector -->
            <View
                android:id="@+id/vector1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/vector_b"
                />
            <TextView
                android:id="@+id/sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/sign_intxt"
                android:textAppearance="@style/sign_in"
                android:gravity="top"
                android:fontFamily="@font/montserrat_bold"
/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
